# encryptor

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  docker-ssh  encryptor.c  run-debug.sh  usage_logs.txt
headers/: commons.h
implementations/: commons.c
src/: encryptor.c
src/headers/: ciphers.h  commons.h  data_input.h
src/implementations/: commons.c  data_input.c  hill_cipher.c  play_fair.c  railfence.c
